Update to work with newest locate:// syntax

--- a/bit/bit.less
+++ b/bit/bit.less
@@ -1,5 +1,5 @@
-@import "~bootstrap/less/mixins.less";
-@import "~bootstrap/less/variables.less";
+@import "locate://bootstrap/less/mixins.less";
+@import "locate://bootstrap/less/variables.less";
 
 .border-radius (@radius: @baseBorderRadius) {
 		border-radius: @radius;
