--- a/bit_carousel/bit_carousel.less
+++ b/bit_carousel/bit_carousel.less
@@ -1,5 +1,5 @@
-@import LOCATE("bootstrap/less/mixins.less");
-@import LOCATE("bootstrap/less/variables.less");
+@import "locate://bootstrap/less/mixins.less";
+@import "locate://bootstrap/less/variables.less";
 
 .border-radius (@radius: @baseBorderRadius) {
 		border-radius: @radius;
