--- a/bit/image-gallery/image-gallery.less
+++ b/bit/image-gallery/image-gallery.less
@@ -1,4 +1,4 @@
-@import "~bootstrap/less/mixins/clearfix.less";
+@import "locate://bootstrap/less/mixins/clearfix.less";
 
 bh-image-gallery {
 	display: block;
