--- a/bit_carousel/image-gallery/image-gallery.less
+++ b/bit_carousel/image-gallery/image-gallery.less
@@ -1,4 +1,4 @@
-@import LOCATE("bootstrap/less/mixins/clearfix.less");
+@import "locate://bootstrap/less/mixins/clearfix.less";
 
 bh-bit-carousel-image-gallery {
 		display: block;
