--- a/style/embed.less
+++ b/style/embed.less
@@ -1,35 +1,37 @@
 // Core variables and mixins
-@import LOCATE("bootstrap/less/variables.less");
-@fa-font-path: LOCATE("font-awesome/fonts");
+@import "locate://bootstrap/less/variables.less";
+
+// '../../' back out of node_modules/font-awesome to root :(
+@fa-font-path: "../../locate://font-awesome/fonts";
 
 @import "./variables.less";
 
-@import LOCATE("bootstrap/less/mixins.less");
+@import "locate://bootstrap/less/mixins.less";
 
 // Reset and dependencies
-@import LOCATE("bootstrap/less/normalize.less");
+@import "locate://bootstrap/less/normalize.less";
 
 // Core CSS
-@import LOCATE("bootstrap/less/scaffolding.less");
-@import LOCATE("bootstrap/less/type.less");
-@import LOCATE("bootstrap/less/buttons.less");
+@import "locate://bootstrap/less/scaffolding.less";
+@import "locate://bootstrap/less/type.less";
+@import "locate://bootstrap/less/buttons.less";
 
 
 // Utility classes
-@import LOCATE("bootstrap/less/utilities.less");
+@import "locate://bootstrap/less/utilities.less";
 
 
-@import LOCATE("font-awesome/less/mixins.less");
-@import LOCATE("font-awesome/less/path.less");
-@import LOCATE("font-awesome/less/core.less");
-@import LOCATE("font-awesome/less/larger.less");
-@import LOCATE("font-awesome/less/fixed-width.less");
-@import LOCATE("font-awesome/less/list.less");
-@import LOCATE("font-awesome/less/bordered-pulled.less");
-@import LOCATE("font-awesome/less/animated.less");
-@import LOCATE("font-awesome/less/rotated-flipped.less");
-@import LOCATE("font-awesome/less/stacked.less");
-@import LOCATE("font-awesome/less/icons.less");
+@import "locate://font-awesome/less/mixins.less";
+@import "locate://font-awesome/less/path.less";
+@import "locate://font-awesome/less/core.less";
+@import "locate://font-awesome/less/larger.less";
+@import "locate://font-awesome/less/fixed-width.less";
+@import "locate://font-awesome/less/list.less";
+@import "locate://font-awesome/less/bordered-pulled.less";
+@import "locate://font-awesome/less/animated.less";
+@import "locate://font-awesome/less/rotated-flipped.less";
+@import "locate://font-awesome/less/stacked.less";
+@import "locate://font-awesome/less/icons.less";
 
 body {
 	background: transparent;
